--- a/index.html
+++ b/index.html
@@ -1,58 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>To do list wep app</title>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!--CSS only-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/assets/css/style.css">
+  <title>Document</title>
 </head>
 <body>
-    <!-- Link to the stylesheet -->
-    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-</head>
-<body>
-  <div class="container">
-  </div>
-    <div class="center">
-        <div class="content">
-          <h1>Good morning!</h1>
-          <h3>You Don't Have To Be Great To Start, But You Have To Start To Be Great!</h3>
-          <p><em>-Somebody</em></p>
-          </div>
+  <body>
+    <div class="container">
+      <div class="row">
+        <div class="intro col-12">
+          <h1>Donow</h1>
+          <div>
+            <div class="border1"></div>
+      <div class="row">
+        <div class="helpText col-12">
+          <p id="quote">“The only thing more important than your to-do list is your to-be list. The only thing more important than your to-be list is to be”
+  
+  -Alan Cohen</p>
+          
+        </div>
+      </div>
+  
+      <div class="row">
+        <div class="col-12">
+          <input id="userInput" type="text" placeholder="New item..." maxlength="27">
+          <button id="enter"><i class="fas fa-pencil-alt"></i></button>
+        </div>
+      </div>
+  
+      <!-- Empty List -->
+      <div class="row">
+        <div class="listItems col-12">
+          <ul class="col-12 offset-0 col-sm-8 offset-sm-2">
+          </ul>
+        </div>
+      </div>
+  
     </div>
-       <div class="link">
-           <h4>Join video meetings with just one tap</h4>
-           <a href="https://calendar.google.com/">Connect Google calendar</a>
-       </div>
-       <form>
-           <div class="task-list">
-             <div class="task-item">
-               <input type="checkbox" id="task-1" name="task-1">
-               <label for="task-1">7am Workout</label>
-             </div>
-             <div class="task-item">
-               <input type="checkbox" id="task-2" name="task-2">
-               <label for="task-2">Breakfast</label>
-             </div>
-             <div class="task-item">
-               <input type="checkbox" id="task-3" name="task-3">
-               <label for="task-3">Attend 11am Meeting</label>
-             </div>
-           </div>
-           <div class="form-group">
-             <label for="task-4"></label>
-               <input type="text" id="task-4" name="task4" placeholder="add task">
-             <button type="submit">Add Task</button>
-           </div>
-         </form>
-       </form>
-    </div>
-
-    <!-- JavaScript Code -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-crossorigin="anonymous"></script>
+    <script type="text/javascript" src="script_method3.js"></script>
+  </body>
+  </html>
 </body>
 </html>
